--- a/generate_filtered_vocalSet_paths.ipynb
+++ b/generate_filtered_vocalSet_paths.ipynb
@@ -1152,9 +1152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venvautovc",
+   "display_name": "torchenv",
    "language": "python",
-   "name": "venvautovc"
+   "name": "torchenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1166,7 +1166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
